@@ -2,3 +2,4 @@
 .Rhistory
 .RData
 .Rprofile
+Thumbs.db
