@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 S3method(coverage,default)
+S3method(coverage,hierarchical_term_count)
 S3method(coverage,search_term)
 S3method(coverage,term_count)
 S3method(plot,classify)
@@ -13,6 +14,7 @@ S3method(plot,term_count)
 S3method(print,accuracy)
 S3method(print,coverage)
 S3method(print,frequent_terms)
+S3method(print,hierarchical_coverage)
 S3method(print,hierarchical_coverage_regex)
 S3method(print,probe_list)
 S3method(print,search_term)
